force-app/main/default/objects/Opportunity/fields/account_annual_revenue__c.field-meta.xml
<CustomField>
    <fullName>account_annual_revenue__c</fullName>
    <description>Displays the account annual revenue on an opportunity</description>
    <formula>Account.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account_annual_revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>