force-app/main/default/objects/Opportunity/fields/additional_meeting_scheduled__c.field-meta.xml
<CustomField>
    <fullName>additional_meeting_scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>additional_meeting_scheduled</label>
    <type>Checkbox</type>
</CustomField>