force-app/main/default/objects/Opportunity/fields/delivery_schedule_date__c.field-meta.xml
<CustomField>
    <fullName>delivery_schedule_date__c</fullName>
    <label>delivery_schedule_date</label>
    <type>Date</type>
</CustomField>