force-app/main/default/objects/Opportunity/fields/first_contact_made__c.field-meta.xml
<CustomField>
    <fullName>first_contact_made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>first_contact_made</label>
    <type>Checkbox</type>
</CustomField>