force-app/main/default/objects/Opportunity/fields/primary1__c.field-meta.xml
<CustomField>
    <fullName>primary1__c</fullName>
    <label>primary1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>arshia</fullName>
            </value>
            <value>
                <fullName>jabeen</fullName>
            </value>
            <value>
                <fullName>shannu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>