force-app/main/default/objects/Opportunity/fields/primary__c.field-meta.xml
<CustomField>
    <fullName>primary__c</fullName>
    <label>primary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>