force-app/main/default/objects/Opportunity/fields/secondary__c.field-meta.xml
<CustomField>
    <fullName>secondary__c</fullName>
    <label>secondary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>