force-app/main/default/objects/Opportunity/validationRules/delivery_schedule_14_days_or_less.validationRule-meta.xml
<ValidationRule>
    <fullName>delivery_schedule_14_days_or_less</fullName>
    <active>true</active>
    <description>sets end date for initial delivery</description>
    <errorConditionFormula>ispickval(StageName,&quot;closedwon&quot;) &amp;&amp; 
(delivery_schedule_date__c - CloseDate)&gt;14</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>dates of type delivery must be no later than 14 days after close date</errorMessage>
</ValidationRule>